[gd_scene load_steps=5 format=3 uid="uid://codingvrcbg31"]

[ext_resource type="PackedScene" uid="uid://dqa48e8ilcndk" path="res://game_objects/player/player.tscn" id="1_ev5gp"]
[ext_resource type="Script" path="res://game_objects/scenes/game.gd" id="1_sqkp8"]
[ext_resource type="PackedScene" uid="uid://c5mexxt3t5ok" path="res://game_objects/projectiles/shooter.tscn" id="4_rencn"]

[sub_resource type="GDScript" id="GDScript_0x85f"]
resource_name = "update"
script/source = "extends Label

# Called when the node enters the scene tree for the first time.
func _ready():
  pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
  text = \"scoops: %d          lives: %d          score: %d\" % [get_parent().dodges, get_parent().lives, get_parent().score]
"

[node name="Game" type="Node"]
script = ExtResource("1_sqkp8")

[node name="Player" parent="." instance=ExtResource("1_ev5gp")]

[node name="Shooter" parent="." instance=ExtResource("4_rencn")]

[node name="Temp" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = SubResource("GDScript_0x85f")

[node name="GameOver" type="PopupMenu" parent="."]
title = "GAME OVER"
position = Vector2i(150, 100)
size = Vector2i(300, 400)
always_on_top = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false

[node name="Replay" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -66.5
offset_right = 28.5
offset_bottom = -35.5
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "replay"

[node name="Quit" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -15.5
offset_right = 19.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "quit"

[node name="Text" type="Label" parent="GameOver"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.5
offset_top = 80.0
offset_right = 80.5
offset_bottom = 122.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="splattered" from="Player" to="." method="_on_player_splattered"]
[connection signal="pressed" from="GameOver/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="GameOver/Quit" to="." method="_on_quit_pressed"]
